infra/main.tf
terraform {
  backend "s3" {
    bucket = "terraform-states.tobyjsullivan.com"
    key = "states/upload/terraform.tfstate"
    region = "us-east-1"
  }
}

provider "aws" {
  region = "ap-southeast-2"
}

resource "aws_security_group" "allow_udp_in" {
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 80
    protocol = "udp"
    to_port = 80
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 22
    protocol = "tcp"
    to_port = 22
  }
}

resource "aws_key_pair" "login" {
  key_name_prefix = "rapidupload"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCob5Cr3R33z+jiVQVyhtBNMKR5TpAjnfRDSANckdcoiE0U4gN/aWBatbGF9vlM1ywIZRdimbKC0+/08kFiYd4vJQzB4EHwMG0LK2UF85dqPLhonZeeNVe1XmEQAvSrzzOi33CbbiBIP3AWNyw85xvBIoVRRdRb8ryf10DRmroX0rVEgWTdTxQj44bPn1yD6MIjzFZzbUFUgdM7hnvBz4UhucCcv9vEqA+QLT+DWyGtAOU03ZjRrvRn+lGqbrv/lZ2IbQ8W1nNQ3A/utZT8nuShNk/s0gBikrsanF9RrXY+bpBSas4hRV2ukmMC89Hj+65J4jV8Kj75lEEkjOXmcDI2Nbv5eiHLUbcK40q9pfnFx1Ufvmn+0H8jQY5VF2p7N03a3+knmVsUpcwC80CC81iSIqYuQDxyZsF9hZD6Rd4BJBhSsw1GJ1akDcZmpJ33 [...]
}

resource "aws_instance" "server" {
  ami = "ami-d38a4ab1"
  instance_type = "c5.large"

  security_groups = ["${aws_security_group.allow_udp_in.name}"]
  key_name = "${aws_key_pair.login.key_name}"
}

output "ip_address" {
  value = "${aws_instance.server.public_ip}"
}
